--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ readme = "README.md"
 [dependencies]
 uuid = { version = "1.8", features = ["serde", "v4"] }
 serde = { version = "1", features = ["derive"] }
+getrandom = { version = "0.2.15", features = ["js"] }
